--- a/BookStore.Server/BookStore.Server.csproj
+++ b/BookStore.Server/BookStore.Server.csproj
@@ -12,11 +12,13 @@
 
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="14.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Proxies" Version="8.0.13" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\BookStore.Application\BookStore.Application.csproj" />
+    <ProjectReference Include="..\BookStore.Infractructure.EfCore\BookStore.Infractructure.EfCore.csproj" />
   </ItemGroup>
 
 </Project>
